# gitdrive

./: Cargo.toml  README.md  go.mod  main.go
pkg/executer/: shell.go
pkg/gitdrive/: syncer.go
pkg/notify/: dedup.go  libnotify.go  noop.go  notifier.go
src/: lib.rs  main.rs
src/gitdrive/: gitdrive.rs  mod.rs  shell.rs
systemd/: gitdrive.service
