[package]
name = "gitdrive"
version = "0.1.0"
authors = ["Peter Gardfjäll <peter.gardfjall.work@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
env_logger = "0.7.1"
log = "0.4"
hostname = "0.3.1"
chrono = "0.4.26"
